# smoothlife

./: CMakeLists.txt
src/: glheaders.h  glwindow.cpp  main.cpp  visualization.cpp
